@@ -1,7 +1,7 @@
 ﻿#region Copyright Simple Injector Contributors
 /* The Simple Injector is an easy-to-use Inversion of Control library for .NET
  * 
- * Copyright (c) 2013 Simple Injector Contributors
+ * Copyright (c) 2013-2016 Simple Injector Contributors
  * 
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
  * associated documentation files (the "Software"), to deal in the Software without restriction, including 
@@ -22,7 +22,6 @@
 
 namespace SimpleInjector.Advanced
 {
-    using System;
     using System.Reflection;
 
     /// <summary>
@@ -36,9 +35,8 @@ namespace SimpleInjector.Advanced
         /// <summary>
         /// Determines whether a property should be injected by the container upon creation of its type.
         /// </summary>
-        /// <param name="serviceType">Type of the abstraction that is requested.</param>
         /// <param name="propertyInfo">The property to check.</param>
         /// <returns>True when the property should be injected.</returns>
-        bool SelectProperty(Type serviceType, PropertyInfo propertyInfo);
+        bool SelectProperty(PropertyInfo propertyInfo);
     }
 }
